service.yml
apiVersion: v1
kind: Service
metadata:
  name: resume-svc
  namespace: nginx
spec:
  selector:
    app: resume-deploy
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
