ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ing
  namespace: nginx
spec:
  rules:
    - host: console-openshift-console.apps.opscluster02.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-svc
                port:
                  number: 9080
