route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: resume-rt
  namespace: nginx
  labels: {}
spec:
  to:
    kind: Service
    name: resume-svc
  tls: null
  port:
    targetPort: 9090
